fix: wrong color under img

--- a/src/scss/productDetailsPage/productDetails.scss
+++ b/src/scss/productDetailsPage/productDetails.scss
@@ -15,7 +15,6 @@
 
     &__left{
         width: 50%;
-        background: $blue-algolia-custom-gradient;
         display: flex;
         align-items: center;
        margin: 0;
